# cargo-plumbing

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.github/: settings.yml
.github/workflows/: ci.yml  rust-next.yml
crates/cargo-plumbing-schemas/: Cargo.toml  README.md  locate-manifest.out.schema.json  locate-manifest.schema.json  lock-dependencies.in.schema.json  lock-dependencies.out.schema.json  lock-dependencies.schema.json  plan-build.in.schema.json  plan-build.out.schema.json  read-lockfile.out.schema.json  read-lockfile.schema.json  read-manifest.out.schema.json  read-manifest.schema.json  resolve-features.in.schema.json  resolve-features.out.schema.json  write-lockfile.in.schema.json
crates/cargo-plumbing-schemas/src/: lib.rs  locate_manifest.rs  lock_dependencies.rs  lockfile.rs  plan_build.rs  read_lockfile.rs  read_manifest.rs  resolve.rs  resolve_features.rs  write_lockfile.rs
examples/: check.rs  metadata.rs
src/: errors.rs  lib.rs
src/cargo/core/resolver/: encode.rs
src/ops/: resolve.rs
tests/testsuite/: check.rs  locate_manifest.rs  lock_dependencies.rs  main.rs  metadata.rs  plan_build.rs  read_lockfile.rs  read_manifest.rs  resolve_features.rs  write_lockfile.rs
tests/testsuite/cargo_plumbing/help/: mod.rs
tests/testsuite/cargo_plumbing_locate_manifest/help/: mod.rs
tests/testsuite/cargo_plumbing_lock_dependencies/help/: mod.rs
tests/testsuite/cargo_plumbing_read_lockfile/help/: mod.rs
tests/testsuite/cargo_plumbing_read_manifest/help/: mod.rs
tests/testsuite/cargo_plumbing_resolve_features/help/: mod.rs
(+1 files in other folders)
